--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index"
   },
   "engines": {
-    "node": ">15"
+    "node": "20.2.0"
   },
   "keywords": [],
   "author": "",
