--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "20.2.0"
+  },
   "dependencies": {
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
