--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "node": "20.2.0"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.2",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
